# compressor

./: BWT.c  BWT.h  CMakeLists.txt  LZ77.c  LZ77.h  MTF.c  MTF.h  byte.c  byte.h  compress.h  decompress.h  files.c  files.h  huffman.c  huffman.h  main.c  tree.c  tree.h
